Fix import/export tree action Execute button not visible/no scroll

--- a/src/components/BackupRestore/Buttonpanel.scss
+++ b/src/components/BackupRestore/Buttonpanel.scss
@@ -1,9 +1,9 @@
 .backup-restore-panel .form-button-panel {
-  //position: absolute;
+  position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: #272a3a;
+  background-color: rgba(191, 190, 192, 0.1);
 
   .pt-intent-success {
     background-color: #24a26e !important;
