--- a/src/components/BackupRestore/DatabaseExport.scss
+++ b/src/components/BackupRestore/DatabaseExport.scss
@@ -16,6 +16,10 @@
   }
 }
 
+.form-scrollable {
+  overflow-y: auto;
+}
+
 .database-export-panel .pt-form-group .database {
   color: #bfbec0 !important;
   margin-top: 10px;
